# file-type

./: CHANGELOG.md  Cargo.toml  FILETYPES.md  FILE_TYPES.md  README.md  SECURITY.md  deny.toml  index.html  release-plz.toml
export/apache_httpd/: Cargo.toml  README.md
export/apache_httpd/src/: main.rs
export/httpd/: Cargo.toml  README.md
export/httpd/src/: main.rs
export/iana/: Cargo.toml  README.md
export/iana/src/: main.rs
export/linguist/: Cargo.toml  README.md
export/linguist/src/: main.rs
export/pronom/: Cargo.toml  README.md
export/pronom/src/: format.rs  main.rs  report_format_detail.rs
export/source_generator/: Cargo.toml
export/source_generator/src/: generator.rs  lib.rs  maps.rs  source.rs
export/wikidata/: Cargo.toml  README.md
export/wikidata/src/: main.rs
file_type/: CHANGELOG.md  Cargo.toml  README.md
file_type/benches/: file_type.rs
file_type/data/apache-httpd/: apache-httpd-10008482833353115188.xml  apache-httpd-10045809873570187998.xml  apache-httpd-10059028400364481609.xml  apache-httpd-1006546886522380100.xml  apache-httpd-10075710292268051668.xml  apache-httpd-10097865076610039677.xml  apache-httpd-10114909409051067364.xml  apache-httpd-10132205750207181206.xml  apache-httpd-10149397603949644781.xml  apache-httpd-10173667125709949723.xml  apache-httpd-10209449085056580529.xml  apache-httpd-10214872156167243065.xml  apache-httpd-10227406980888024354.xml  apache-httpd-10230197699255622710.xml  apache-httpd-10233703363409414994.xml  apache-httpd-10350728140267115011.xml  apache-httpd-10354148540362929487.xml  apache-httpd-10418899209645427276.xml  apache-httpd-10420792781717195325.xml  apache-httpd-1042982873375166231.xml  apache-httpd-10445141258930429958.xml  apache-httpd-10459519546450867951.xml  apache-httpd-10465296028727937591.xml  apache-httpd-10466185904492655952.xml  apache-httpd-10480217407537137783.xml  apache-httpd-10545300983186267140.xml  apache-httpd-10548945477827165241.xml  apache-httpd-10581694100561422952.xml  apache-httpd-10582393778901387068.xml  apache-httpd-10596767586543562184.xml  apache-httpd-10622120689245270024.xml  apache-httpd-10646039219402533391.xml  apache-httpd-10655404354733431138.xml  apache-httpd-10674547702623898054.xml  apache-httpd-10691704915181776398.xml  apache-httpd-10692450451458080727.xml  apache-httpd-10710046949140717356.xml  apache-httpd-10712924823320355462.xml  apache-httpd-10735678142131287808.xml  apache-httpd-10771167679637303936.xml  (+731 more)
file_type/data/custom/: custom-1.xml  custom-2.xml  custom-3.xml  custom-4.xml  custom-5.xml
file_type/data/default/: default-1.xml  default-2.xml
file_type/data/httpd/: httpd-10008482833353115188.xml  httpd-10045809873570187998.xml  httpd-10059028400364481609.xml  httpd-1006546886522380100.xml  httpd-10075710292268051668.xml  httpd-10097865076610039677.xml  httpd-10114909409051067364.xml  httpd-10132205750207181206.xml  httpd-10149397603949644781.xml  httpd-10173667125709949723.xml  httpd-10209449085056580529.xml  httpd-10214872156167243065.xml  httpd-10227406980888024354.xml  httpd-10230197699255622710.xml  httpd-10233703363409414994.xml  httpd-10350728140267115011.xml  httpd-10354148540362929487.xml  httpd-10418899209645427276.xml  httpd-10420792781717195325.xml  httpd-1042982873375166231.xml  httpd-10445141258930429958.xml  httpd-10459519546450867951.xml  httpd-10465296028727937591.xml  httpd-10466185904492655952.xml  httpd-10480217407537137783.xml  httpd-10545300983186267140.xml  httpd-10548945477827165241.xml  httpd-10581694100561422952.xml  httpd-10582393778901387068.xml  httpd-10596767586543562184.xml  httpd-10622120689245270024.xml  httpd-10646039219402533391.xml  httpd-10655404354733431138.xml  httpd-10674547702623898054.xml  httpd-10691704915181776398.xml  httpd-10692450451458080727.xml  httpd-10710046949140717356.xml  httpd-10712924823320355462.xml  httpd-10735678142131287808.xml  httpd-10771167679637303936.xml  (+731 more)
file_type/data/linguist/: linguist-0.xml  linguist-1.xml  linguist-10.xml  linguist-100.xml  linguist-101.xml  linguist-1013566805.xml  linguist-102.xml  linguist-1020148948.xml  linguist-1027892786.xml  linguist-1028705371.xml  linguist-103.xml  linguist-1031374237.xml  linguist-1035892117.xml  linguist-104.xml  linguist-1040646257.xml  linguist-1042332086.xml  linguist-1045019587.xml  linguist-105.xml  linguist-105187618.xml  linguist-1054258749.xml  linguist-1054391671.xml  linguist-1055528081.xml  linguist-1055641948.xml  linguist-1057618448.xml  linguist-106.xml  linguist-106029007.xml  linguist-1066250075.xml  linguist-1067292663.xml  linguist-107.xml  linguist-108.xml  linguist-109.xml  linguist-11.xml  linguist-110.xml  linguist-111.xml  linguist-111148035.xml  linguist-112.xml  linguist-113.xml  linguist-114.xml  linguist-115.xml  linguist-116.xml  (+718 more)
file_type/data/pronom/: fmt-1.xml  fmt-10.xml  fmt-100.xml  fmt-1000.xml  fmt-1001.xml  fmt-1002.xml  fmt-1003.xml  fmt-1004.xml  fmt-1005.xml  fmt-1006.xml  fmt-1007.xml  fmt-1008.xml  fmt-1009.xml  fmt-101.xml  fmt-1010.xml  fmt-1011.xml  fmt-1012.xml  fmt-1013.xml  fmt-1014.xml  fmt-1015.xml  fmt-1016.xml  fmt-1017.xml  fmt-1018.xml  fmt-1019.xml  fmt-102.xml  fmt-1020.xml  fmt-1021.xml  fmt-1022.xml  fmt-1023.xml  fmt-1024.xml  fmt-1025.xml  fmt-1026.xml  fmt-1027.xml  fmt-1028.xml  fmt-1029.xml  fmt-103.xml  fmt-1030.xml  fmt-1031.xml  fmt-1032.xml  fmt-1033.xml  (+2422 more)
file_type/data/wikidata/: wikidata-100135637.xml  wikidata-100136218.xml  wikidata-100136955.xml  wikidata-100136960.xml  wikidata-100137240.xml  wikidata-100151671.xml  wikidata-100151737.xml  (+12649 more)
file_type/src/: error.rs  extensions.rs  file_formats.rs  file_type.rs  file_types.rs  format.rs  lib.rs  media_types.rs  signatures.rs  sources.rs
file_type/tests/: classify_custom_files.rs  classify_files.rs  classify_pronom_files.rs  classify_wikidata_files.rs  file_format.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: file_type_bytes.rs
map_generator/: Cargo.toml  README.md
map_generator/src/: main.rs
pronom_export/: Cargo.toml  README.md
pronom_export/src/: main.rs  pronom_report.rs
(+31543 files in other folders)
