[workspace]
default-members = [
    "export/httpd",
    "export/iana",
    "export/linguist",
    "export/pronom",
    "export/source_generator",
    "export/wikidata",
    "file_type",
    "map_generator",
    "test_data",
]
members = [
    "export/httpd",
    "export/iana",
    "export/linguist",
    "export/pronom",
    "export/source_generator",
    "export/wikidata",
    "file_type",
    "map_generator",
    "test_data",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["filesystem"]
edition = "2024"
keywords = ["file", "file-type", "format"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/file-type"
rust-version = "1.90.0"
version = "0.8.10"

[workspace.dependencies]
anyhow = "1.0.100"
criterion = "0.7.0"
csv = "1.3.1"
file-format = "0.28.0"
infer = "0.19.0"
indoc = "2.0.6"
magic = "0.16.7"
mime_guess = "2.0.5"
phf = { version = "0.13.1", default-features = false }
phf_codegen = "0.13.1"
quick-xml = "0.38.3"
rayon = "1.11.0"
reqwest = "0.12.23"
serde = "1.0.226"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
