[workspace]
default-members = [
    "export/httpd",
    "export/iana",
    "export/linguist",
    "export/pronom",
    "export/source_generator",
    "export/wikidata",
    "file_type",
    "map_generator",
    "test_data",
]
members = [
    "export/httpd",
    "export/iana",
    "export/linguist",
    "export/pronom",
    "export/source_generator",
    "export/wikidata",
    "file_type",
    "map_generator",
    "test_data",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["filesystem"]
edition = "2024"
keywords = ["file", "file-type", "format"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/file-type"
rust-version = "1.92.0"
version = "0.8.10"

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
large_stack_arrays = "allow"
result_large_err = "allow"

[workspace.dependencies]
anyhow = "1.0.100"
criterion = "0.8.1"
csv = "1.4.0"
file-format = "0.28.0"
infer = "0.19.0"
indoc = "2.0.7"
magic = "0.16.7"
mime_guess = "2.0.5"
phf = { version = "0.13.1", default-features = false }
phf_codegen = "0.13.1"
quick-xml = "0.38.4"
rayon = "1.11.0"
reqwest = "0.13.0"
serde = "1.0.228"
serde_json = "1.0.148"
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
