[workspace]
default-members = [
    "export/httpd",
    "export/iana",
    "export/linguist",
    "export/pronom",
    "export/source_generator",
    "export/wikidata",
    "file_type",
    "map_generator",
    "test_data",
]
members = [
    "export/httpd",
    "export/iana",
    "export/linguist",
    "export/pronom",
    "export/source_generator",
    "export/wikidata",
    "file_type",
    "map_generator",
    "test_data",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["filesystem"]
edition = "2024"
keywords = ["file", "file-type", "format"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/file-type"
rust-version = "1.97.1"
version = "0.8.11"

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "deny"
unused_qualifications = "deny"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
expect_used = "deny"
fallible_impl_from = "deny"
indexing_slicing = "deny"
large_stack_arrays = "allow"
mod_module_files = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unreachable = "deny"
unimplemented = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"

[workspace.dependencies]
anyhow = "1.0.104"
criterion = "0.8.2"
csv = "1.4.0"
file-format = "0.29.0"
infer = "0.22.0"
indoc = "2.0.7"
magic = "0.16.7"
mime_guess = "2.0.5"
phf = { version = "0.14.0", default-features = false }
phf_codegen = "0.14.0"
quick-xml = "0.41.0"
rayon = "1.12.0"
reqwest = "0.13.4"
serde = "1.0.229"
serde_json = "1.0.150"
serde-saphyr = "0.0.29"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
