[package]
authors.workspace = true
categories.workspace = true
description = "File type detector"
edition.workspace = true
keywords = ["file", "file-type", "format"]
license.workspace = true
name = "file_type"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, optional = true, features = ["io-util"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true, features = ["fs", "io-util"] }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["custom", "pronom"]
custom = []
httpd = []
iana = []
linguist = []
pronom = []
tokio = [
    "dep:tokio",
]
wikidata = []

[[bench]]
harness = false
name = "file_type"
