[package]
authors.workspace = true
categories.workspace = true
description = "File type detector"
edition.workspace = true
keywords = ["file", "file-type", "format"]
license.workspace = true
name = "file_type"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
phf = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
file-format = { workspace = true }
infer = { workspace = true }
magic = { workspace = true }
mime_guess = { workspace = true }

[features]
all = ["httpd", "iana", "linguist", "pronom", "std", "wikidata"]
default = ["std", "wikidata"]
httpd = []
iana = []
linguist = []
pronom = []
std = []
wikidata = []

[[bench]]
harness = false
name = "file_type"
