[package]
edition.workspace = true
name = "map_generator"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
file_type = { path = "../file_type", version = "0.8.3", features = ["all"] }
phf = { workspace = true }
phf_codegen = { workspace = true }
