[package]
edition.workspace = true
name = "map_generator"
publish = false
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
file_type = { path = "../file_type", version = "0.8.11", features = ["all"] }
source_generator = { path = "../export/source_generator", version = "0.1.0" }
