[package]
edition.workspace = true
name = "httpd"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
file_type = { path = "../../file_type", version = "0.7.3" }
reqwest = { workspace = true, features = ["blocking"] }
source_generator = { path = "../source_generator", version = "0.1.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
