[package]
edition.workspace = true
name = "linguist"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
file_type = { path = "../../file_type", version = "0.0.3" }
jiff = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
quick-xml = { workspace = true, features = ["serde", "serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
