[package]
edition.workspace = true
name = "linguist"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
file_type = { path = "../../file_type", version = "0.7.5" }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
source_generator = { path = "../source_generator", version = "0.1.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
