[package]
edition.workspace = true
name = "pronom"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
file_type = { path = "../../file_type", version = "0.8.9" }
quick-xml = { workspace = true, features = ["serde", "serialize"] }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
source_generator = { path = "../source_generator", version = "0.1.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
indoc = { workspace = true }
