[package]
edition.workspace = true
name = "source_generator"
publish = false
license.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
file_type = { path = "../../file_type", version = "0.9.0", features = ["all"] }
phf_codegen = { workspace = true }
tracing = { workspace = true }
