[package]
edition.workspace = true
name = "wikidata"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
file_type = { path = "../../file_type", version = "0.6.0" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
source_generator = { path = "../source_generator", version = "0.6.0" }
tokio = { workspace = true, features = ["full"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
